[package]
name = "knodiq_engine"
version = "0.2.54"
edition = "2024"

[lib]
name = "knodiq_engine"
path = "src/lib.rs"

[dependencies]
cpal = "0.15.3"
rubato = "0.16.1"
serde = { "version" = "1.0.219", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["all-codecs"] }
uuid = { version = "1.16.0", features = ["v4"] }

[profile.release]
debug = true
