[package]
name = "knodiq_engine"
version = "0.3.9"

edition = "2024"
license = "Apache-2.0"

[lib]
name = "knodiq_engine"
path = "src/lib.rs"

[dependencies]
cpal = "0.15.3"
rubato = "0.16.1"
serde = { "version" = "1.0.219", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["all-codecs"] }
uuid = { version = "1.16.0", features = ["v4"] }
